# tracker

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: e914d5ecbb68_init.py
app/: main.py  utils.py
app/core/: config.py  database.py
app/models/: __init__.py  base_mixins.py  bug.py  task.py
app/routers/: bugs.py  home.py  tasks.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: index.html
app/templates/bugs/: create.html  detail.html  list.html
app/templates/layouts/: base.html
app/templates/tasks/: create.html  detail.html  list.html
